--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+detected_faces/
+images/
+images_faces/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -77,6 +82,7 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+*.ipynb
 
 # IPython
 profile_default/
